--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,10 @@
       <version>4.9</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+        <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+                <version>3.3.1</version>
+                </dependency>
   </dependencies>
 </project>
